# CalibrationWizard

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: wizard.xml
src/: Calib.cpp  Calib.h  Proc.cpp  Proc.h  main_wizard.cpp  setting.h
src_matlab/: buildAutoCorrMatrix.m  buildSingleAutoCorrMatrix.m  build_Jacobian.m  build_Jacobian_nextpose.m  compute_nextpose_points.m  cost_function.m  extract_info.m  main_estimate.m  plot_nextpose.m  uncertainty_map.m
